fix: overflow, and prevent the player from moving outside the playing board

--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,7 @@ form input[type="text"] {
   height: 90vh;
   width: 90vw;
   background-color: white;
+  overflow: hidden;
 }
 
 #player {
